JEDIT VERSION HISTORY

* Version 2.2pre7

+ Enhancements

- Built-in actions are now dynamically loaded as they are executed, this
  improves startup time and memory consumption somewhat
- The file loading code now bypasses the Swing document interface, so it
  should run a little faster
- jEdit no longer adds two components to the EditBus, this should make
  things a tiny bit faster
- Faster jEdit.closeAllBuffers() method, jEdit shouldn't take as long to exit
  and close all buffers
- New concept of 'temporary buffers' speeds up recursive directory search
  dramatically (the time to search in the org.gjt.sp.jedit.syntax package,
  for example, has been cut from 20 seconds to 5!!!)
- Key binding changes:
  C+d C+d: C+d
  C+d C+e: C+e C+d
  C+d C+s: CS+BACK_SPACE
  C+d C+f: CS+DELETE
  C+e C+[: CA+[
  C+e C+]: CA+]
  C+m: C+e C+m
  C+e C+m XXX: C+m XXX
  F2: F3
  F3: S+F3
  reload is now bound to F2
  reload-all is now bound to S+F2
  load-session is now bound to F4
  save-session is now bound to S+F4

+ Bug Fixes

- jEdit checked for a bogus 'saveGeometry' property (since 2.2pre5)
- Fixed bug in globToRE() method (Mike Dillon) (since 2.1pre3)
- Highlights are now drawn for invalid lines as well - so LineGuides will be
  drawn on empty lines (since 1.7pre5???)
- BufferListSet didn't properly search the last file (since 2.2pre4)
- Hopefully fixed last remaining problems of multifile find-next
  (problems with this have been around since 1.7pre3)

* Version 2.2pre6

+ New Features

- Some parts of the EditBus plugin integrated into the core, old event
  system removed.
  - if your plugin only uses the ViewUpdate, BufferUpdate, PropertiesChanged
    and MacrosChanged messages, it will no longer require EditBus.jar.
  - however, if your plugin uses the GetShell or GetOutput messages,
    it will still need EditBus.jar to operate.
- New methods in TextUtilities class:
  findWordStart(String line, int pos, String noWordSep)