@@ -140,9 +140,8 @@ public class Sessions
 	private static Buffer readSessionCommand(String line)
 	{
 		String path = null;
-		int selStart = 0;
-		int selEnd = 0;
-		boolean rectSel = false;
+		Integer selStart = null;
+		Integer selEnd = null;
 		boolean current = false;
 
 		StringTokenizer st = new StringTokenizer(line,"\t");
@@ -153,11 +152,9 @@ public class Sessions
 			if(token.startsWith("path:"))
 				path = token.substring(5);
 			else if(token.startsWith("selStart:"))
-				selStart = Integer.parseInt(token.substring(9));
+				selStart = new Integer(token.substring(9));
 			else if(token.startsWith("selEnd:"))
-				selEnd = Integer.parseInt(token.substring(7));
-			else if(token.equals("rectSel"))
-				rectSel = true;
+				selEnd = new Integer(token.substring(7));
 			else if(token.equals("current"))
 				current = true;
 		}
@@ -166,7 +163,13 @@ public class Sessions
 			return null;
 
 		Buffer buffer = jEdit.openFile(null,null,path,false,false);
-		buffer.setCaretInfo(selStart,selEnd,rectSel);
+
+		if(selStart != null && selEnd != null)
+		{
+			buffer.putProperty(Buffer.SELECTION_START,selStart);
+			buffer.putProperty(Buffer.SELECTION_END,selEnd);
+		}
+
 		return (current ? buffer : null);
 	}
 
@@ -179,14 +182,17 @@ public class Sessions
 		out.write("path:");
 		out.write(buffer.getPath());
 
-		out.write("\tselStart:");
-		out.write(String.valueOf(buffer.getSavedSelStart()));
+		Integer start = (Integer)buffer.getProperty(Buffer.SELECTION_START);
+		Integer end = (Integer)buffer.getProperty(Buffer.SELECTION_END);
+		
+		if(start != null && end != null)
+		{
+			out.write("\tselStart:");
+			out.write(start.toString());
 
-		out.write("\tselEnd:");
-		out.write(String.valueOf(buffer.getSavedSelEnd()));
-
-		if(buffer.isSelectionRectangular())
-			out.write("\trectSel");
+			out.write("\tselEnd:");
+			out.write(end.toString());
+		}
 
 		if(view.getBuffer() == buffer)
 			out.write("\tcurrent");
@@ -196,6 +202,9 @@ public class Sessions
 /*
  * ChangeLog:
  * $Log$
+ * Revision 1.9  1999/11/29 02:45:50  sp
+ * Scroll bar position saved when switching buffers
+ *
  * Revision 1.8  1999/11/21 01:20:30  sp
  * Bug fixes, EditBus updates, fixed some warnings generated by jikes +P
  *
